--- a/CalcIt/CalcIt.GameClient/ApplicationStyle.xaml
+++ b/CalcIt/CalcIt.GameClient/ApplicationStyle.xaml
@@ -19,6 +19,17 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Margin" Value="5,0" />
     </Style>
+
+    <Style x:Key="ResultTextBlock" TargetType="{x:Type TextBlock}">
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <Setter Property="TextTrimming" Value="None"/>
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="Quartz MS" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="Margin" Value="5,0" />
+    </Style>
+
     <Style x:Key="TimeCounterTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="TextTrimming" Value="None"/>
