--- a/CalcIt/CalcIt.GameClient/View/MainWindow.xaml
+++ b/CalcIt/CalcIt.GameClient/View/MainWindow.xaml
@@ -2,29 +2,36 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:CalcIt.GameClient.ViewModel" 
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:converter="clr-namespace:CalcIt.GameClient.Converter" 
+        Title="MainWindow" Height="550" Width="530">
     <Window.DataContext>
         <vm:MainViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <converter:BooleanToVisibilityConverter x:Key="booleanToVisibitlyConverter" />
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="5" >
+        <Grid Grid.Row="0" Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal" IsEnabled="{Binding IsChangeConnectionEnabled}">
-                <TextBlock Margin="0,-3,5,3">Connection:</TextBlock>
-                <TextBox Text="{Binding ConnectionString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"></TextBox>
-                <TextBlock Margin="10,0,5,0">Username:</TextBlock>
-                <TextBox Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"></TextBox>
-            </StackPanel>
-            <Button Margin="5,0" Grid.Column="1" Command="{Binding StartGame}">Start Game</Button>
+                <TextBlock Grid.Column="0" Margin="0,0,5,0">Connection:</TextBlock>
+            <TextBox Grid.Column="1" Text="{Binding ConnectionString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"></TextBox>
+            <TextBlock  Grid.Column="2" Margin="10,0,5,0">Username:</TextBlock>
+            <TextBox  Grid.Column="3"  Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"></TextBox>
+            <Button Grid.Column="4" Margin="5,0" Command="{Binding StartGame}" MinWidth="120" HorizontalAlignment="Stretch"
+                    Visibility="{Binding IsGameRunning, 
+                Converter={StaticResource ResourceKey=booleanToVisibitlyConverter}, ConverterParameter=true}">Start Game</Button>
         </Grid>
 
         <Grid Margin="0,25,0,5" Grid.Row="0" Grid.RowSpan="2">
@@ -39,7 +46,7 @@
             <TextBlock Text="{Binding CalcOperator}" Grid.Column="1" Style="{DynamicResource BigNumberTextBlock}"></TextBlock>
             <TextBlock Text="{Binding NumberB}" Grid.Column="2" Style="{DynamicResource BigNumberTextBlock}"></TextBlock>
             <TextBlock Grid.Column="3" Style="{DynamicResource BigNumberTextBlock}">=</TextBlock>
-            <TextBox Text="{Binding Answer, Mode=TwoWay}" Grid.Column="4" Style="{DynamicResource BigNumberTextBox}" HorizontalAlignment="Stretch" ></TextBox>
+            <TextBox Text="{Binding Answer, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Column="4" Style="{DynamicResource BigNumberTextBox}" HorizontalAlignment="Stretch" ></TextBox>
         </Grid>
 
         <Grid Grid.Row="2" Margin="5">
@@ -59,7 +66,7 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" Visibility="{Binding IsGameEnd, Converter={StaticResource ResourceKey=booleanToVisibitlyConverter}}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition/>
@@ -70,14 +77,17 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Button Grid.ColumnSpan="2" Margin="5" Command="{Binding EndGame}">End Game</Button>
-                <TextBlock Grid.Row="1" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Round:</TextBlock>
-                <TextBlock Grid.Row="2" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Points:</TextBlock>
-                <TextBlock Grid.Row="3" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Time Played:</TextBlock>
+                <TextBlock Grid.Row="1" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Rounds Played:</TextBlock>
+                <TextBlock Grid.Row="2" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Time played:</TextBlock>
+                <TextBlock Grid.Row="3" Grid.Column="0" Style="{DynamicResource DetailTextBlock}">Points:</TextBlock>
+
+                <TextBlock Text="{Binding GameCount}" Grid.Row="1" Grid.Column="1" Style="{DynamicResource ResultTextBlock}"></TextBlock>
+                <TextBlock Text="{Binding GamePlayTime}" Grid.Row="2" Grid.Column="1" Style="{DynamicResource ResultTextBlock}"></TextBlock>
+                <TextBlock Text="{Binding Points}" Grid.Row="3" Grid.Column="1" Style="{DynamicResource ResultTextBlock}"></TextBlock>
             </Grid>
 
             <!-- Highscore -->
-            <Grid Grid.Column="1">
+            <Grid Grid.Column="1" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition/>
@@ -86,9 +96,9 @@
                     <TextBlock Margin="10,0">Highscore</TextBlock>
                     <Button Margin="10,0" Command="{Binding RefreshHighscore}">Refresh</Button>
                 </StackPanel>
-                <ListView Grid.Row="1">
-
-                </ListView>
+                <DataGrid Grid.Row="1" AutoGenerateColumns="True" ItemsSource="{Binding HighScoreList}" >
+                    
+                </DataGrid>
             </Grid>
         </Grid>
     </Grid>
